--- a/Users/dominiquesaripapazoglou/Documents/rasa-work/rasa-x/rasa-test-bot/.app/git/1/domain.yml
+++ b/Users/dominiquesaripapazoglou/Documents/rasa-work/rasa-x/rasa-test-bot/.app/git/1/domain.yml
@@ -94,10 +94,14 @@ responses:
   - text: Go for a run!
   utter_diet_info:
   - text: A healthy diet is full of veggies and fruits!
+  utter_ask_confirm_exercise:
+  - text: Did you exercise yesterday? Don't sweat it if you didn't run a marathon - walks count!
   utter_ask_sleep:
   - text: How much sleep did you get last night?
   utter_ask_exercise:
   - text: What kind of exercise did you do?
+  utter_ask_diet:
+  - text: Did you stick to a healthy diet yesterday?
   utter_ask_stress:
   - text: Is your stress level low, medium, or high ?
   utter_ask_goal:
@@ -106,6 +110,8 @@ responses:
   - text: "Here's your daily wellness log:\n - Exercised?: {confirm_exercise}\n - Type of exercise: {exercise}\n - Sleep: {sleep}\n - Stuck to a healthy diet?: {diet}\n - Stress level: {stress}\n - Goal: {goal}"
   utter_no_worries:
   - text: No problem :)
+  utter_ask_continue:
+  - text: Sorry, I don't quite understand. Do you want to continue?
   utter_out_of_scope:
   - text: Do you want to continue with the survey?
 actions:
